Refactor parameter handling to use Priority class for improved command parameter prioritization and streamline input matching logic